--- a/policymanagementtool/package.json
+++ b/policymanagementtool/package.json
@@ -35,6 +35,8 @@
     "react": "^17.0.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
